--- a/Myerp/Tpl/Chanpin/header_chanpin.html
+++ b/Myerp/Tpl/Chanpin/header_chanpin.html
@@ -71,6 +71,7 @@ function shenhe_after(data,status){
 	});
 
 </script>
+<script src="<{:__PUBLIC__}>/myerp/jquery-1.8.1.min.js"></script>
 
 <div class="moduleTitle" style="margin-bottom:10px;">
   <h3 style=""><{$navigation}><{$datatitle}></h3>
