Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Chanpin/header_chanpin.html
+++ b/Myerp/Tpl/Chanpin/header_chanpin.html
@@ -41,10 +41,11 @@ function shenhe_after(data,status){
 
 jQuery(function(){
 	var str = '<{$web_xingcheng}>';
+	var str = '11111';
 	jQuery("#fe_text").val(str);
 })
 </script>
-<input id="fe_text" type="hidden" >
+<input id="fe_text" type="hidden" value="2222" >
 <script src="<{:__PUBLIC__}>/myerp/zeroclipboard-master/ZeroClipboard.js"></script>
 <script src="<{:__PUBLIC__}>/myerp/zeroclipboard-master/main.js"></script>
 
