Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Chanpin/header_chanpin.html
+++ b/Myerp/Tpl/Chanpin/header_chanpin.html
@@ -45,7 +45,7 @@ jQuery(function(){
 	jQuery("#fe_text").val(str);
 })
 </script>
-<input id="fe_text" type="hidden" value="2222" >
+<input id="fe_text" value="2222" >
 <script src="<{:__PUBLIC__}>/myerp/zeroclipboard-master/ZeroClipboard.js"></script>
 <script src="<{:__PUBLIC__}>/myerp/zeroclipboard-master/main.js"></script>
 
