--- a/Myerp/Tpl/Chanpin/header_chanpin.html
+++ b/Myerp/Tpl/Chanpin/header_chanpin.html
@@ -39,13 +39,13 @@ function shenhe_after(data,status){
 	}
 }
 
-jQuery(function(){
-	var str = '<{$web_xingcheng}>';
-	var str = '11111';
-	jQuery("#fe_text").val(str);
-})
+//jQuery(function(){
+//	var str = '<{$web_xingcheng}>';
+//	var str = '11111';
+//	jQuery("#fe_text").val(str);
+//})
 </script>
-<input id="fe_text" value="2222" >
+<input id="fe_text" type="hidden" value="123" >
 <script src="<{:__PUBLIC__}>/myerp/zeroclipboard-master/ZeroClipboard.js"></script>
 <script src="<{:__PUBLIC__}>/myerp/zeroclipboard-master/main.js"></script>
 
