--- a/qqq.html
+++ b/qqq.html
@@ -2,8 +2,7 @@
   <body>
   <input type="button" class="button" value=" 生成网店行程格式（行程二必填）" id="copy-button" data-clipboard-target="fe_text">
 <input id="fe_text" type="hidden" value="123" >
-<script src="<{:__PUBLIC__}>/myerp/zeroclipboard-master/ZeroClipboard.js"></script>
-<script src="<{:__PUBLIC__}>/myerp/zeroclipboard-master/main.js"></script>
-
+<script src="http://m.dlgulian.com/Public/myerp/zeroclipboard-master/ZeroClipboard.js"></script>
+<script src="http://m.dlgulian.com/Public/myerp/zeroclipboard-master/main.js"></script>
   </body>
 </html>
