Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/qqq.html
+++ b/qqq.html
@@ -1,3 +1,23 @@
+
+<script language="javascript" src="http://m.dlgulian.com/Public/myerp/jquery-1.7.2.min.js" ></script>
+<link rel="stylesheet" type="text/css" href="http://m.dlgulian.com/Public/myerp/css/style (2).css">
+<link rel="stylesheet" type="text/css" href="http://m.dlgulian.com/Public/myerp/css/yui (2).css">
+<link rel="stylesheet" type="text/css" href="http://m.dlgulian.com/Public/myerp/css/deprecated (2).css">
+<link rel="stylesheet" type="text/css" href="http://m.dlgulian.com/Public/myerp/css/colors.sugar.css">
+<link rel="stylesheet" type="text/css" href="http://m.dlgulian.com/Public/myerp/css/fonts.normal.css">
+<link rel="stylesheet" type="text/css" href="http://m.dlgulian.com/Public/myerp/css/gaopeng.css">
+<script type="text/javascript" src="http://m.dlgulian.com/Public/myerp/js/sugar_grp1_yui.js"></script>
+<script type="text/javascript" src="http://m.dlgulian.com/Public/myerp/js/sugar_grp1.js"></script>
+<script type="text/javascript" src="http://m.dlgulian.com/Public/myerp/js/style.js"></script>
+<script type="text/javascript" src="/Public/myerp/Thinkjs/Base.js"></script>
+<script type="text/javascript" src="/Public/myerp/Thinkjs/prototype.js"></script>
+<script type="text/javascript" src="/Public/myerp/Thinkjs/mootools.js"></script>
+<script type="text/javascript" src="/Public/myerp/ThinkAjax_GP.js"></script>
+<script type="text/javascript" src="/Public/myerp/Thinkjs/Form/CheckForm_GP.js"></script>
+<link type="text/css" href="http://m.dlgulian.com/Public/myerp/jquery-ui-1.8.20.custom/css/ui-lightness/jquery-ui-1.8.20.custom.css" rel="stylesheet" />
+<script type="text/javascript" src="http://m.dlgulian.com/Public/myerp/jquery-ui-1.8.20.custom/js/jquery-ui-1.8.20.custom.min.js"></script>
+
+
 <html>
   <body>
   <input type="button" class="button" value=" 生成网店行程格式（行程二必填）" id="copy-button" data-clipboard-target="fe_text">
