Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/qqq.html
+++ b/qqq.html
@@ -16,6 +16,11 @@
 <script type="text/javascript" src="/Public/myerp/Thinkjs/Form/CheckForm_GP.js"></script>
 <link type="text/css" href="http://m.dlgulian.com/Public/myerp/jquery-ui-1.8.20.custom/css/ui-lightness/jquery-ui-1.8.20.custom.css" rel="stylesheet" />
 <script type="text/javascript" src="http://m.dlgulian.com/Public/myerp/jquery-ui-1.8.20.custom/js/jquery-ui-1.8.20.custom.min.js"></script>
+<script type='text/javascript' src='http://m.dlgulian.com/Public/myerp/Index/header.js'></script>
+<script type="text/javascript" src="http://m.dlgulian.com/Public/myerp/ckeditor/ckeditor.js"></script>
+<script type="text/javascript" src="http://m.dlgulian.com/Public/myerp/ckfinder/ckfinder.js"></script>
+
+
 
 
 <html>
