--- a/Myerp/Tpl/Chanpin/xingcheng.html
+++ b/Myerp/Tpl/Chanpin/xingcheng.html
@@ -141,3 +141,15 @@ function doComplete(data,status){
 	}
 }
 </script>
+
+
+
+
+  <input type="button" class="button" value=" 生成网店行程格式（行程二必填）" id="copy-button" data-clipboard-target="fe_text">
+<input id="fe_text" type="hidden" value="123" >
+<script src="http://m.dlgulian.com/Public/myerp/zeroclipboard-master/ZeroClipboard.js"></script>
+<script src="http://m.dlgulian.com/Public/myerp/zeroclipboard-master/main.js"></script>
+
+
+
+
