Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Chanpin/xingcheng.html
+++ b/Myerp/Tpl/Chanpin/xingcheng.html
@@ -142,12 +142,9 @@ function doComplete(data,status){
 }
 </script>
 
-
-
-
 <input id="fe_text" type="hidden" value="123" >
-<script src="http://m.dlgulian.com/Public/myerp/zeroclipboard-master/ZeroClipboard.js"></script>
-<script src="http://m.dlgulian.com/Public/myerp/zeroclipboard-master/main.js"></script>
+<script src="<{:__PUBLIC__}>/myerp/zeroclipboard-master/ZeroClipboard.js"></script>
+<script src="<{:__PUBLIC__}>/myerp/zeroclipboard-master/main.js"></script>
 
 
 
