Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Chanpin/header_chanpin.html
+++ b/Myerp/Tpl/Chanpin/header_chanpin.html
@@ -45,6 +45,8 @@ function shenhe_after(data,status){
 //	jQuery("#fe_text").val(str);
 //})
 </script>
+<script src="<{:__PUBLIC__}>/myerp/zeroclipboard-master/ZeroClipboard.js"></script>
+<script src="<{:__PUBLIC__}>/myerp/zeroclipboard-master/main.js"></script>
 
 
 <div class="moduleTitle" style="margin-bottom:10px;">
