Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Chanpin/header_chanpin.html
+++ b/Myerp/Tpl/Chanpin/header_chanpin.html
@@ -39,12 +39,8 @@ function shenhe_after(data,status){
 	}
 }
 
-jQuery(function(){
-	var str = '<{$web_xingcheng}>';
-	jQuery("#fe_text").val(str);
-})
 </script>
-<input id="fe_text" type="hidden" >
+<textarea id="fe_text" type="hidden"><{$web_xingcheng}></textarea>
 
 <div class="moduleTitle" style="margin-bottom:10px;">
   <h3 style=""><{$navigation}><{$datatitle}></h3>
