Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Chanpin/header_chanpin.html
+++ b/Myerp/Tpl/Chanpin/header_chanpin.html
@@ -40,7 +40,7 @@ function shenhe_after(data,status){
 }
 
 </script>
-<textarea id="fe_text" type="hidden"><{$web_xingcheng}></textarea>
+<textarea id="fe_text" style="display:none"><{$web_xingcheng}></textarea>
 
 <div class="moduleTitle" style="margin-bottom:10px;">
   <h3 style=""><{$navigation}><{$datatitle}></h3>
