--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -477,6 +477,7 @@ jQuery().ready(function() {
               <option value="签单">签单</option>
               <option value="对冲">对冲</option>
               <option value="月结">月结</option>
+              <option value="VIP贵宾卡">VIP贵宾卡</option>
             </select></td>
           <td scope="row" align="left" valign="top"><input type="text" name="renshu" style="width:80px;" id="renshu<{$v['chanpinID']}>" value="<php>if($v['renshu']) echo $v['renshu']; else echo 0;</php>" check="^\S+$" warning="人数不能为空,且不能含有空格" ></td>
           <td scope="row" align="left" valign="top">
@@ -578,6 +579,7 @@ jQuery().ready(function() {
               <option value="签单">签单</option>
               <option value="对冲">对冲</option>
               <option value="月结">月结</option>
+              <option value="VIP贵宾卡">VIP贵宾卡</option>
             </select></td>
           <td scope="row" align="left" valign="top"><input type="text" name="renshu" style="width:80px;" id="renshu<{$v['chanpinID']}>" value="<php>if($v['renshu']) echo $v['renshu']; else echo 0;</php>" check="^\S+$" warning="人数不能为空,且不能含有空格" ></td>
           <td scope="row" align="left" valign="top">
@@ -673,6 +675,7 @@ jQuery().ready(function() {
               <option value="签单">签单</option>
               <option value="对冲">对冲</option>
               <option value="月结">月结</option>
+              <option value="VIP贵宾卡">VIP贵宾卡</option>
             </select></td>
           <td scope="row" align="left" valign="top"><input type="text" name="remark" id="remark<{$v['chanpinID']}>" value="<{$v['remark']}>" style="width:200px;"></td>
           <td scope="row" align="left" valign="top"></td>
