--- a/Myerp/Tpl/Chanpin/zituanxiangmu.html
+++ b/Myerp/Tpl/Chanpin/zituanxiangmu.html
@@ -164,6 +164,7 @@
               <option value="签单">签单</option>
               <option value="对冲">对冲</option>
               <option value="月结">月结</option>
+              <option value="VIP贵宾卡">VIP贵宾卡</option>
             </select></td>
         </tr>
         <tr>
