--- a/Myerp/Tpl/Qianzheng/dingdanxinxi.html
+++ b/Myerp/Tpl/Qianzheng/dingdanxinxi.html
@@ -238,6 +238,9 @@ function quxiao_after(data,status){
               <option value="转账">转账</option>
               <option value="支票">支票</option>
               <option value="签单">签单</option>
+              <option value="对冲">对冲</option>
+              <option value="月结">月结</option>
+              <option value="VIP贵宾卡">VIP贵宾卡</option>
             </select>
             <input style="width:60px;" type="button" value=" 确认 " onclick="dofukuan(<{$dingdan['chanpinID']}>)">
           </td>
