Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/SetSystem/templatelist.html
+++ b/Myerp/Tpl/SetSystem/templatelist.html
@@ -37,7 +37,7 @@ var SITE_INDEX = '<{:SITE_INDEX}>';
          ];
         
         jQuery().ready(function() {
-                <php>foreach($datalist[chanpin] as $v){</php>
+                <php>foreach($datalist as $v){</php>
                     myautocomplete("#parentID<{$v[systemID]}>",'部门');
                  <php>}</php>
         });
