Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Chanpin/fabu.html
+++ b/Myerp/Tpl/Chanpin/fabu.html
@@ -395,6 +395,11 @@ jQuery(document).ready(function(){
 	  jQuery("#chufachengshi_id").find("option:selected").text(chufadi_arr[1]); 
 	  jQuery("#chufashengfen").val(chufadi_arr[0]);
 	  jQuery("#chufachengshi").val(chufadi_arr[1]);
+	  //已选项默认列表
+	  pid = jQuery('#chufashengfen_id').val();
+	  nexts = 'chufachengshi_id';
+	  change(pid ,nexts);
+	  jQuery('#chufachengshi').val(jQuery('#chufachengshi_id').find("option:selected").text());
 	  
 });
 
