--- a/Myerp/Tpl/Chanpin/fabu.html
+++ b/Myerp/Tpl/Chanpin/fabu.html
@@ -396,10 +396,10 @@ jQuery(document).ready(function(){
 	  jQuery("#chufashengfen").val(chufadi_arr[0]);
 	  jQuery("#chufachengshi").val(chufadi_arr[1]);
 	  //已选项默认列表
-	  pid = jQuery('#chufashengfen_id').val();
-	  nexts = 'chufachengshi_id';
-	  change(pid ,nexts);
-	  jQuery('#chufachengshi').val(jQuery('#chufachengshi_id').find("option:selected").text());
+//	  pid = jQuery('#chufashengfen_id').val();
+//	  nexts = 'chufachengshi_id';
+//	  change(pid ,nexts);
+//	  jQuery('#chufachengshi').val(jQuery('#chufachengshi_id').find("option:selected").text());
 	  
 });
 
