--- a/Myerp/Tpl/Chanpin/fabu.html
+++ b/Myerp/Tpl/Chanpin/fabu.html
@@ -396,11 +396,7 @@ jQuery(document).ready(function(){
 	  jQuery("#chufashengfen").val(chufadi_arr[0]);
 	  jQuery("#chufachengshi").val(chufadi_arr[1]);
 	  //已选项默认列表
-//	  pid = jQuery('#chufashengfen_id').val();
-//	  nexts = 'chufachengshi_id';
-//	  change(pid ,nexts);
-//	  jQuery('#chufachengshi').val(jQuery('#chufachengshi_id').find("option:selected").text());
-	  
+		change_pos_go();  
 });
 
 function change_pos(sid){
