Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Chanpin/fabu.html
+++ b/Myerp/Tpl/Chanpin/fabu.html
@@ -391,6 +391,7 @@ jQuery(document).ready(function(){
 		async: false,
 		data:	"parentID=202&type=城市",
 		success:	function(msg){
+						jQuery("#chufachengshi_id").empty();
 					  jQuery(msg).appendTo("#chufachengshi_id");
 				  }
 	});
