Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -118,6 +118,9 @@ function shenhe_after(data,status,info,type,idname){
 		if(data['dotype'] == '申请')
 		setTimeout("location.reload()",2000);		
 	}
+	else{
+		art.dialog.get('id-demo').content(data['status_shenhe']).time(4000);
+	}
 }
 
 
