--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -119,7 +119,7 @@ function shenhe_after(data,status,info,type,idname){
 		setTimeout("location.reload()",2000);		
 	}
 	else{
-		art.dialog.get('id-demo').content(data['status_shenhe']).time(4000);
+		art.dialog.get('id-demo').content(info).time(4000);
 	}
 }
 
