Signed-off-by: p308715744 <p3087157442000@yahoo.com.cn>

--- a/Myerp/Tpl/Chanpin/zituanbaozhang.html
+++ b/Myerp/Tpl/Chanpin/zituanbaozhang.html
@@ -1,3 +1,2 @@
-            <php>
-        foreach($baozhang['baozhangitemlist'] as $v){dump($v);}
-          </php>
+<tp:includeCA file="Index:showheader" />
+
